public interface DBExecutor {
    void runQuery(String type);
}
